--- a/2-Event-listeners/styles.css
+++ b/2-Event-listeners/styles.css
@@ -10,9 +10,11 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     display: flex;
-    flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    align-content:center;
+    row-gap: 3rem;
 }
 
 #main-heading{
@@ -21,4 +23,44 @@ body{
     font-weight: 600;
     padding: 2rem;
     color: #f3efef;
+    width: 100%;
+    margin-top: -7rem;
+}
+
+.container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 3rem;
+    font-family: Arial, Helvetica, sans-serif;
+    column-gap: 5rem;
+}
+
+.boxes{
+    border: 4px solid #f3efef;
+    padding: 5rem 2.5rem 4rem 2.5rem;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    font-weight: 600;
+}
+
+h1{
+    font-size: 2.3rem;
+    color: #f3efef;
+    padding-bottom: 4.5rem;
+    margin-bottom: 1.2rem;
+}
+
+button{
+    border: 3px solid #f3efef;
+    background: linear-gradient(#03031a, #141453, #1c1c5f, #111169, #1212cb); 
+    padding: 1.2rem 2rem;
+    border-radius: 12px;
+    color: #f3efef;
+    font-size: 1.3rem;
+    font-weight: 600;
+    margin-bottom: 0.8rem;
 }
