--- a/3-Event-listener-example/styles.css
+++ b/3-Event-listener-example/styles.css
@@ -8,4 +8,42 @@ body{
     height: 100vh;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+}
+
+#main-heading{
+    color: #ffffff;
+    font-size: 5rem;
+    width: 100%;
+    height: 3rem;
+    text-align: center;
+    margin-top: -35rem;
+}
+
+.container{
+    width: 100%;
+    padding: 6vh;
+}
+
+.reveal-btn{
+    padding: 9rem ;
+    width: 100%;
+    font-size: 3rem;
+    background-color: transparent;
+    border: 3px solid #ffffff;
+    color: #ffffff;
+    border-radius: 7px;
+    margin-top: -10rem;
+}
+
+.hidden-content {
+    display: none;
+}
+
+.hidden-content.reveal-btn{
+    display: block;
 }
