--- a/3-Event-listener-example/styles.css
+++ b/3-Event-listener-example/styles.css
@@ -13,6 +13,7 @@ body{
     justify-content: space-between;
     align-content: center;
     align-items: center;
+    row-gap: 10rem;
 }
 
 #main-heading{
@@ -21,7 +22,7 @@ body{
     width: 100%;
     height: 3rem;
     text-align: center;
-    margin-top: -35rem;
+    
 }
 
 .container{
@@ -31,7 +32,7 @@ body{
 
 .reveal-btn{
     padding: 9rem ;
-    width: 100%;
+    width: 50rem;
     font-size: 3rem;
     background-color: transparent;
     border: 3px solid #ffffff;
@@ -45,5 +46,9 @@ body{
 }
 
 .hidden-content.reveal-btn{
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 35rem;
+    height: 15rem;
 }
