--- a/p2-modal/styles.css
+++ b/p2-modal/styles.css
@@ -1,3 +1,10 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lato', sans-serif;
+}
+
 body{
     background: url(forest.jpg) no-repeat center center/ cover;
     height: 100vh;
@@ -15,7 +22,7 @@ body{
     color: #ffff;
     border: solid 3px #ffff;
     border-radius: 10px;
-    padding: 3px;
+    padding: 30px;
     box-shadow: 0 0 3px black ;
     transition: .5s;
 }
@@ -25,3 +32,36 @@ body{
     color: #000;
     cursor: pointer;
 }
+
+#modal{
+    background-color: #ffff;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 250px;
+    height: 150px;
+    padding: 20px 35px;
+    border-radius: 5px;
+    font-size: 1.7rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    animation-name: animatemodal;
+    animation-duration: .4s;
+}
+
+
+
+#close-btn{
+    /*margin-top: -8px; */
+    font-size: 2.5rem;
+}
+
+#close-btn{
+    cursor: pointer;
+    font-size: 2.5rem;
+    color: #ff0000;
+}
+
