--- a/p2-modal/styles.css
+++ b/p2-modal/styles.css
@@ -65,3 +65,14 @@ body{
     color: #ff0000;
 }
 
+#modal-container{
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+/*modal animation */
