--- a/p2-modal/styles.css
+++ b/p2-modal/styles.css
@@ -48,11 +48,9 @@ body{
     justify-content: space-between;
     align-items: center;
 
-    animation-name: animatemodal;
+    animation-name: animatemodal; /*animation is called here*/
     animation-duration: .4s;
 }
-
-
 
 #close-btn{
     /*margin-top: -8px; */
@@ -73,6 +71,19 @@ body{
     width: 100%;
     height: 100%;
     z-index: 1;
+    background-color: rgba(0,0,0, .3);
 }
 
 /*modal animation */
+
+@keyframes animatemodal{
+    from{
+        top: -300px;
+        opacity: 0;
+    }
+
+    to{
+        top: 50%;
+        opacity: 1;
+    }
+}
