--- a/p3-accordeon/styles.css
+++ b/p3-accordeon/styles.css
@@ -5,3 +5,22 @@
     font-family: 'Lato', sans-serif;
 }
 
+body{
+    background: url(interrogations.jpg) no-repeat center center/ cover;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.accordion{
+    width: 65%;
+    background-color: #ffff;
+    padding: 30px;
+    border-radius: 30px;
+}
+
+.accordion .accordion-title{
+    margin-bottom: 30px;
+    text-align: center;
+}
